--- a/templates/product_sales_report.html
+++ b/templates/product_sales_report.html
@@ -15,6 +15,17 @@
 <div class="card shadow-sm">
     <div class="card-body p-0">
 
+        <div class="mb-3">
+    <a href="{{ url_for('export_sales_excel') }}" class="btn btn-success me-2">
+        <i class="bi bi-file-earmark-excel"></i> Export Excel
+    </a>
+
+    <a href="{{ url_for('export_sales_pdf') }}" class="btn btn-danger">
+        <i class="bi bi-file-earmark-pdf"></i> Export PDF
+    </a>
+</div>
+
+
         <table class="table table-hover table-striped mb-0">
             <thead class="table-light">
                 <tr>
