--- a/templates/product_sales_report.html
+++ b/templates/product_sales_report.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<script src="{{ url_for('static', filename='js/sales_charts.js') }}"></script>
 
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="mb-0">
@@ -24,6 +25,22 @@
         <i class="bi bi-file-earmark-pdf"></i> Export PDF
     </a>
 </div>
+<div class="row mt-4">
+    <div class="col-md-6">
+        <canvas id="qtyChart" height="200"></canvas>
+    </div>
+
+    <div class="col-md-6">
+        <canvas id="revenueChart" height="200"></canvas>
+    </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col-md-6">
+        <canvas id="categoryChart" height="200"></canvas>
+    </div>
+</div>
+
 
 
         <table class="table table-hover table-striped mb-0">
@@ -103,6 +120,11 @@
 
             </tbody>
         </table>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+    const salesData = {{ sales_report | tojson }};
+</script>
+
 
     </div>
 </div>
