--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -14,6 +14,11 @@
                 <i class="bi bi-folder me-1"></i> Categories
             </a>
 
+            <a href="{{ url_for('product_sales_report') }}" class="btn btn-outline-success me-2">
+    <i class="bi bi-graph-up-arrow me-1"></i> Sales Report
+</a>
+
+
             <a href="{{ url_for('add_product') }}" class="btn btn-primary">
                 <i class="bi bi-plus-lg me-1"></i> Add Product
             </a>
@@ -194,3 +199,4 @@
 <script src="{{ url_for('static', filename='js/inventory_add_edit.js') }}"></script>
 
 {% endblock %}
+
