--- a/templates/reports.html
+++ b/templates/reports.html
@@ -94,6 +94,18 @@
     </div>
 </div>
 
+ <div class="col-md-6 col-lg-4">
+        <a href="{{ url_for('purchase_report') }}" class="card report-card lift">
+            <div class="card-body text-center">
+                <div class="icon-circle bg-success-soft text-success mb-3"><i class="fa-solid fa-sack-dollar"></i></div>
+                <h5>Purchase Report</h5>
+                <p class="text-muted"></p>
+            </div>
+        </a>
+    </div>
+</div>
+
+
 <!-- Product-wise Sales Report -->
 <div class="col-md-4 mb-3">
     <a href="{{ url_for('product_sales_report') }}" class="text-decoration-none">
@@ -120,21 +132,12 @@
     </a>
 </div>
 
-<!-- Sales Charts Only -->
-<div class="col-md-4 mb-3">
-    <a href="{{ url_for('product_sales_report') }}#charts" class="text-decoration-none">
-        <div class="card shadow-sm report-card h-100">
-            <div class="card-body text-center">
-                <i class="fa-solid fa-chart-pie fa-2x mb-2 text-warning"></i>
-                <h5 class="fw-bold">Sales Charts</h5>
-                <p class="text-muted small mb-0">Bar, Line & Pie charts</p>
-            </div>
-        </div>
-    </a>
-</div>
+
+
 
 {% endblock %}
 
 ---
+
 
 
