--- a/templates/admin_master.html
+++ b/templates/admin_master.html
@@ -156,7 +156,7 @@
         <a href="{{ url_for('dash') }}"><i class="fa-solid fa-chart-pie"></i> <span class="link-text">Dashboard</span></a>
             <a href="inventory"><i class="fa-solid fa-box-open"></i> <span class="link-text">Inventory</span></a>
             
-            <a href="employees"><i class="fa-solid fa-users"></i> <span class="link-text">Employees</span></a>
+            <a href="employee_master"><i class="fa-solid fa-users"></i> <span class="link-text">Employees</span></a>
             
 
 <a href="{{ url_for('emp_list') }}"><i class="fa-solid fa-file-invoice-dollar"></i> <span class="link-text">Employee Finance</span></a>
@@ -210,6 +210,7 @@
 {% block page_scripts %}{% endblock %}
 </body>
 </html>
+
 
 
 
